# testrust

./: Cargo.toml  Makefile  build.rs  build_bindings.sh  test_bindings.sh  uniffi.toml
sdk/go/: libtestrust.dylib  main.go
sdk/go/testrust/: testrust.c  testrust.go  testrust.h
sdk/python/: libtestrust.dylib  main.py  testrust.py
src/: lib.rs  testrust.udl  testrust.uniffi.rs
